feat: add event daily login rewards
